# bimanual_teleoperation

./: .gitmodules  Dockerfile  Readme.md  docker_build.sh  entrypoint_isaac_sim.sh  run_isaac_sim.sh
.devcontainer/: Dockerfile  devcontainer.json
overlay_ws/src/aruco_cube_tracking/: about.txt  package.xml  setup.cfg  setup.py
overlay_ws/src/aruco_cube_tracking/aruco_cube_tracking/: aruco_cube_tracking.py  aruco_cube_tracking_node.py
overlay_ws/src/aruco_cube_tracking/config/: config.yaml  distortion_coefficients.npy
overlay_ws/src/aruco_cube_tracking/launch/: aruco_cube_tracking.launch.py
overlay_ws/src/aruco_pose_estimation/: package.xml  setup.py
overlay_ws/src/aruco_pose_estimation/aruco_pose_estimation/: aruco_pose_estimation_node.py
overlay_ws/src/aruco_pose_estimation/config/: calibration_matrix.npy  config.yaml
overlay_ws/src/aruco_pose_estimation/launch/: aruco_pose_estimation.launch.py
overlay_ws/src/dual_arm_kinova_moveit_config/: CMakeLists.txt  README.md  package.xml
overlay_ws/src/dual_arm_kinova_moveit_config/config/: gen3_dual.xacro  kinematics.yaml  kortex_robot.xacro  left_arm_servo_config.yaml  left_initial_positions.yaml  moveit.rviz  ompl_planning.yaml  right_arm_servo_config.yaml  right_initial_positions.yaml  ros2_controllers.yaml
overlay_ws/src/dual_arm_kinova_moveit_config/launch/: move_group_kinova.launch.py
overlay_ws/src/dual_arm_servo_moveit_config/: CMakeLists.txt  package.xml
overlay_ws/src/dual_arm_servo_moveit_config/config/kinova/: gen3_dual.srdf  gen3_dual.xacro  joint_limits.yaml  kortex_robot.xacro  left_initial_positions.yaml  moveit.rviz
overlay_ws/src/dual_arm_servo_moveit_config/config/panda/: joint_limits.yaml  kinematics.yaml  left_arm_servo_config.yaml  panda.srdf  panda.urdf.xacro  panda_arm_macro.xacro  right_arm_servo_config.yaml  ros2_controllers.yaml
overlay_ws/src/dual_arm_servo_moveit_config/launch/: left_servo_kinova.launch.py  left_servo_panda.launch.py  move_group_kinova.launch.py  move_group_panda.launch.py  moveit.rviz  right_servo_kinova.launch.py  right_servo_panda.launch.py
