<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aruco_pose_estimation</name>
  <version>0.0.0</version>
  <description>Package to use aruco pose estimation for teleoperation of bimanual manipulator setup using two aruco markers</description>
  <author email="kedar.rajpathak@rwth-aachen.de">Kedar Rajpathak</author>
  <maintainer email="kedar.rajpathak@rwth-aachen.de">Kedar Rajpathak</maintainer>
  <license>BSD</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>
  <depend>numpy</depend>
  <depend>python3-transforms3d-pip</depend>
  <depend>python3-quaternion-pip</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
